[workspace]
resolver = "2"
members = [
  "pck",
  "cli",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
md-5 = "0.10"
walkdir = "2"

aes = "0.8"
cfb-mode = "0.8"
rand = "0.9"
num_cpus = "1.16"
