[package]
name = "godotpck-rs"
version = "0.2.1"
edition = "2021"
license.workspace = true
description = "Core library for reading and writing Godot .pck files"
repository = "https://github.com/vagmr/GodotPckTool"
keywords = ["godot", "pck", "game"]
categories = ["game-development", "parsing"]

[dependencies]
anyhow.workspace = true
regex.workspace = true
md-5.workspace = true
walkdir.workspace = true
aes.workspace = true
cfb-mode.workspace = true
rand.workspace = true
num_cpus.workspace = true
